--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div id="singleString" class="section">
         <h3>Validate unit expressions one at a time</h3>
         <p>Enter a unit expression to be validated:
-          <input type="text" id="valString">&nbsp; &nbsp; &nbsp; &nbsp;
+          <input type="text" id="valString" placeholder="begin typing ...">&nbsp; &nbsp; &nbsp; &nbsp;
           <button id="toggleHints"
                   onclick="
                 demoPkg.UcumDemo.getInstance().toggleDisplay('hints',
@@ -183,7 +183,7 @@
   </div><!-- fine-print -->
   <!-- end page footer -->
 
-    <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/9.1.1/autocomplete-lhc_jQuery.min.js"></script>
+    <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/9.2.2/autocomplete-lhc_jQuery.min.js"></script>
     <script src="dist/ucum-lhc.js"></script>
     <script src="demo-dist/ucum-demo.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
