page changes, search autocompleter on validation page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <h2>UCUM Unit Expression Validation</h2>
       <div id="singleString" class="section">
         <h3>Validate unit expressions one at a time</h3>
-        <p>Enter a unit expression to be validated:
+        <p>Enter or select a unit expression to be validated:
           <input type="text" id="valString" placeholder="begin typing ...">&nbsp; &nbsp; &nbsp; &nbsp;
           <button id="toggleHints"
                   onclick="
