changes from code review

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h3>Validate unit expressions one at a time</h3>
         <p>Enter or select a unit expression to be validated:
           <input type="text" id="valString" placeholder="begin typing ..."
-                 onblur=
+                 onchange=
                  "demoPkg.UcumDemo.getInstance().reportUnitStringValidity('valString',
                                                                    'validationString')">&nbsp; &nbsp; &nbsp; &nbsp;
           <button id="toggleHints"
@@ -187,8 +187,8 @@
   <!-- end page footer -->
 
     <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/9.2.3/autocomplete-lhc_jQuery.min.js"></script>
-    <script src="dist/ucum-lhc.min.js"></script>
-    <script src="demo-dist/ucum-demo.min.js"></script>
+    <script src="dist/ucum-lhc.js"></script>
+    <script src="demo-dist/ucum-demo.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
