changes from code review

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </div>
         <div><br>&nbsp;&nbsp;  <button id="doConversionButton"
                                        onclick="demoPkg.UcumDemo.getInstance().convertUnit('convertFrom',
-                                                             'convertNum<script>',
-                                                             'convertTo<script>')"
+                                                             'convertNum',
+                                                             'convertTo')"
                                        type="button">Convert</button>
         </div>
         <p id="resultString">&nbsp;&nbsp;</p>
