changes from code review

--- a/demo.html
+++ b/demo.html
@@ -166,12 +166,12 @@
         <!-- <a id="downlink" href="" style="'display:none'"></a> -->
       </div><!-- filevalidation div -->
       <div id="otherstuff" class="section">
-        <h3>About the LHC UCUM service</h3>
+        <h3>About the LHC UCUM Library</h3>
         <ul>
-        <li>Click <a href="index.html">here</a> to read a description of the LHC
-        UCUM service.</li>
-        <li>Click <a href="https://github.com/lhncbc/ucum-lhc">here</a> to go to
-          the GitHub code repository.</li>
+        <li>Here is a <a href="index.html">description</a> of the LHC UCUM
+        Software Library.</li>
+        <li>The code is available from the
+          <a href="https://github.com/lhncbc/ucum-lhc">GitHub code repository</a>.</li>
       </div> <!-- end otherstuff div -->
     </div> <!-- end validation div -->
 </div> <!-- end tab-content div -->
