--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 
     <p>There are two ways to use the UCUM-LHC library.  The first way is to
     download the <a href="http://bower.io">bower</a> ucum-lhc package.  The second
-    is to clone the git repository from the <a href="https://github.com/lhncbc/ucum-lhc">
-    GitHub</a> repository.
+    is to clone the <a href="https://github.com/lhncbc/ucum-lhc">GitHubrepository</a>.
 
     <h3>Using the LHC UCUM Code in your browser.</h3>
 
@@ -61,7 +60,7 @@
       <a href="https://github.com/lhncbc/ucum-lhc">here</a>.  The repository
     includes all the code found in the ucum-lhc bower package as well as
     supporting code in the form of test code, data import/export code,
-    and the code for the demo site.  Instructions for cloing a GitHub
+    and the code for the demo site.  Instructions for cloning a GitHub
     repository are on the GitHub page.</p>
 <br>
   <!-- page footer -->
