--- a/index.html
+++ b/index.html
@@ -38,18 +38,14 @@
     <p>Check out our <a href="demo.html">demonstration page</a> that
       illustrates the validation and conversion functions of the LHC UCUM library.</p>
 
-    <p>There are two ways to use the UCUM-LHC library.  The first way is to
-    download the <a href="http://bower.io">bower</a> ucum-lhc package.  The second
-    is to clone the <a href="https://github.com/lhncbc/ucum-lhc">GitHub repository</a>.
 
-    <h3>Using the LHC UCUM Code in your browser.</h3>
+    <h3>Using the LHC UCUM Code.</h3>
 
     <p>The LHC UCUM library can be downloaded and installed as a <a href="http://bower.io">
     bower</a> package for use with a browser.  The installed dist/ucum-lhc.js
     module package includes the source code you need for the validation and conversion
-    functions as well as the ucum code definitions file.  We assume that your
-    main motivation for including the ucum-lhc code is to have the validation
-    and conversion capabilities for units of measure available in a browser.
+    functions as well as the ucum code definitions file.  The LHC Ucum code provides
+    validation and conversion capabilities for units of measure.
     Those functions are accessed from the ucumPkg.UcumLhcUtils class.
     Descriptions of those functions are included in the README.md file in the
     LHC UCUM <a href="https://github.com/lhncbc/ucum-lhc">GitHub</a> repository.</p>
