--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     unit codes built on other unit codes, e.g., mg/kg/h (milligram per killogram
     per hour).</p>
 
+    <h3>See the code in action.</h3>
+
     <p>Check out our <a href="demo.html">demonstration page</a> that
       illustrates the validation and conversion functions of the LHC UCUM library.</p>
 
