--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     unit codes built on other unit codes, e.g., mg/kg/h (milligram per killogram
     per hour).</p>
 
-    <h3>See the code in action.</h3>
+    <h3>See the code in action</h3>
 
     <p>Check out our <a href="demo.html">demonstration page</a> that
       illustrates the validation and conversion functions of the LHC UCUM library.</p>
 
 
-    <h3>Using the LHC UCUM Code.</h3>
+    <h3>Using the LHC UCUM Code</h3>
 
     <p>The LHC UCUM library can be downloaded and installed as a <a href="http://bower.io">
     bower</a> package for use with a browser.  The installed dist/ucum-lhc.js
@@ -52,7 +52,7 @@
     Descriptions of those functions are included in the README.md file in the
     LHC UCUM <a href="https://github.com/lhncbc/ucum-lhc">GitHub</a> repository.</p>
 
-      <h3>Clone the ucum-lhc repository from GitHub.</h3>
+      <h3>Clone the ucum-lhc repository from GitHub</h3>
 
     <p>You may clone the ucum-lhc repository from GitHub
       <a href="https://github.com/lhncbc/ucum-lhc">here</a>.  The repository
