remaining changes for unit code creation updates, prefix conversion problems

--- a/demo.html
+++ b/demo.html
@@ -34,11 +34,14 @@
       <div id="convSection" class="section">
         <h3>Convert values from one UCUM unit to another</h3>
         <p>Enter or select a valid UCUM code for the unit you want to convert:
-          <input type="text" id="convertFrom" placeholder="begin typing ..."
-                 onblur="demoPkg.UcumDemo.getInstance().getCommensurables('convertFrom',
+          <input type="text" id="convertFrom" placeholder="begin typing ...">
+             <!---  Not using this list -- for now
+          onblur="demoPkg.UcumDemo.getInstance().getCommensurables('convertFrom',
                                                                   'convertTo',
                                                                   'resultString')">
-          &nbsp;&nbsp;UCUM codes are <b>case-sensitive</b></p>
+          -->
+          &nbsp;&nbsp;
+          UCUM codes are <b>case-sensitive</b></p>
         <p class="small-print">If you are not finding a unit that you think should be there, check the
           advanced search options to see if you should add a category (or categories)
           to the search.
