--- a/demo.html
+++ b/demo.html
@@ -71,7 +71,7 @@
         <div><br>&nbsp;&nbsp;  <button id="doConversionButton"
                                        onclick="demoPkg.UcumDemo.getInstance().convertUnit('convertFrom',
                                                              'convertNum',
-                                                             'convertTo')"
+                                                             'convertTo', true)"
                                        type="button">Convert</button>
         </div>
         <p id="resultString">&nbsp;&nbsp;</p>
@@ -86,7 +86,8 @@
           <input type="text" id="valString" placeholder="begin typing ..."
                  onchange=
                  "demoPkg.UcumDemo.getInstance().reportUnitStringValidity('valString',
-                                                                   'validationString')">&nbsp; &nbsp;
+                                                                   'validationString',
+                                                                   true)">&nbsp; &nbsp;
           Press tab or return to validate the expression</p>
           <p class="small-print">If you are not finding a unit that you think should be there, check the
           advanced search options to see if you should add a category (or categories)
