--- a/demo.html
+++ b/demo.html
@@ -71,7 +71,7 @@
         <div><br>&nbsp;&nbsp;  <button id="doConversionButton"
                                        onclick="demoPkg.UcumDemo.getInstance().convertUnit('convertFrom',
                                                              'convertNum',
-                                                             'convertTo', true)"
+                                                             'convertTo', 'suggest')"
                                        type="button">Convert</button>
         </div>
         <p id="resultString">&nbsp;&nbsp;</p>
@@ -87,7 +87,7 @@
                  onchange=
                  "demoPkg.UcumDemo.getInstance().reportUnitStringValidity('valString',
                                                                    'validationString',
-                                                                   true)">&nbsp; &nbsp;
+                                                                   'suggest')">&nbsp; &nbsp;
           Press tab or return to validate the expression</p>
           <p class="small-print">If you are not finding a unit that you think should be there, check the
           advanced search options to see if you should add a category (or categories)
