changed link on top of demo page, added note to file validation section

--- a/demo.html
+++ b/demo.html
@@ -14,7 +14,7 @@
         <img src="demo-dist/assets/images/lhncbc.jpg" alt="Home" />
       </a>
       <div id="siteNameBox">
-        <a href="/"><span id=siteName>Units of Measure (UCUM) Validator and Converter</span><br>
+        <a href="index.html"><span id=siteName>Units of Measure (UCUM) Validator and Converter</span><br>
           <span id=tagline>A demonstration site for the LHC UCUM service</span></a>
       </div>
     </div>
@@ -158,6 +158,11 @@
         </li>
         <li>You will be asked where you want the file saved.  You may
           change the name of the output file at that time.
+        </li>
+        <li>Note that this will only validate <b>unit</b> expressions.
+          Although prefixes used with a unit code, e.g., "kL" (kiloliter), are
+          recognized as prefixes modifying a unit code, a prefix submitted by
+          itself, e.g., "E" (exa) will result in an "invalid unit code" return.
         </li>
       </ul>
         </p>
