changes from code review

--- a/demo.html
+++ b/demo.html
@@ -76,7 +76,7 @@
                              "demoPkg.UcumDemo.getInstance().reportUnitStringValidity('convertTo',
           'resultString', 'to')"&nbsp;>
           </div>
-          <div id="convertRight" style="visibility: hidden">
+          <div id="convertRight"><!--style="visibility: hidden"-->
             You can enter other commensurate units that are not on this list.
           </div>
         </div>
