changes to make autocompleter list selection work, etc.

--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
     <title>LHC UCUM Demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/10.1.1/autocomplete-lhc_jQueryUI.min.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link href="demo-dist/ucumDemo.min.css" rel="stylesheet"/>
   </head>
   <body id="demobody" onload="demoPkg.UcumDemo.getInstance().buildAdvancedSettings();" >
@@ -14,7 +14,7 @@
         <img src="demo-dist/assets/images/lhncbc.jpg" alt="Home" />
       </a>
       <div id="siteNameBox">
-        <a href="/"><span id=siteName>Units of Measure (UCUM) Validator and Converter</span><br>
+        <a href="index.html"><span id=siteName>Units of Measure (UCUM) Validator and Converter</span><br>
           <span id=tagline>A demonstration site for the LHC UCUM service</span></a>
       </div>
     </div>
@@ -74,9 +74,9 @@
               <input type="text" id="convertTo"
                      onchange=
                              "demoPkg.UcumDemo.getInstance().reportUnitStringValidity('convertTo',
-          'resultString', 'to')"&nbsp;>
+          'resultString', 'to')">
           </div>
-          <div id="convertRight"><!--style="visibility: hidden"-->
+          <div id="convertRight">
             You can enter other commensurate units that are not on this list.
           </div>
         </div>
@@ -99,7 +99,7 @@
                  onchange=
                  "demoPkg.UcumDemo.getInstance().reportUnitStringValidity('valString',
                                                                    'validationString',
-                                                                   true)">&nbsp; &nbsp;
+                                                                   'display')">&nbsp; &nbsp;
           Press tab or return to validate the expression</p>
           <p class="small-print">If you are not finding a unit that you think should be there, check the
           advanced search options to see if you should add a category (or categories)
@@ -113,7 +113,7 @@
         <div id="advancedSearchVal" style="display: none">
           <!-- this section is built in the demo code when the page is loaded -->
         </div> <!-- advancedSearchVal division -->
-        </p>&nbsp;&nbsp;
+        <br>&nbsp;&nbsp;
         <p id="validationString">&nbsp;&nbsp;</p>
         <p id="validList"></p>
         <p><button id="toggleHints"
@@ -172,7 +172,7 @@
           change the name of the output file at that time.
         </li>
       </ul>
-        </p>
+
         <input type="file" id="inputfile"
                onchange="demoPkg.UcumDemo.getInstance().fileSelected()">
         <div id="colNameDiv" style="display:none">
@@ -196,6 +196,7 @@
         Software Library.</li>
         <li>The code is available from the
           <a href="https://github.com/lhncbc/ucum-lhc">GitHub code repository</a>.</li>
+        </ul>
       </div> <!-- end otherstuff div -->
     </div> <!-- end validation div -->
 </div> <!-- end tab-content div -->
@@ -223,8 +224,8 @@
   <!-- end page footer -->
 
     <script src="https://lforms-service.nlm.nih.gov/autocomplete-lhc-versions/10.1.1/autocomplete-lhc_jQuery.min.js"></script>
-    <script src="dist/ucum-lhc.min.js"></script>
-    <script src="demo-dist/ucum-demo.min.js"></script>
+    <script src="dist/ucum-lhc.js"></script>
+    <script src="demo-dist/ucum-demo.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
