--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="demo-dist/assets/images/lhncbc.jpg" alt="Home" />
       </a>
       <div id="siteNameBox">
-        <a href="/"><span id=siteName>UCUM-LHC</span><br>
+        <a href="index.html"><span id=siteName>UCUM-LHC</span><br>
           <span id=tagline>Units of Measure Code from the Lister Hill Center of
           the National Library of Medicine</span></a>
       </div>
