change from code review

--- a/demo.html
+++ b/demo.html
@@ -172,9 +172,10 @@
           change the name of the output file at that time.
         </li>
         <li>Note that this will only validate <b>unit</b> expressions.
-          Although prefixes used with a unit code, e.g., "kL" (kiloliter), are
-          recognized as prefixes modifying a unit code, a prefix submitted by
-          itself, e.g., "E" (exa) will result in an "invalid unit code" return.
+          Although prefixes used with a unit code, e.g., "kL" (kiloliter),
+          are recognized as a prefix ("k" for kilo) modifying a unit code
+          ("L" for liter), a prefix submitted by itself, e.g., "E" (exa)
+          will result in an "invalid unit code" return.
         </li>
       </ul>
 
