--- a/demo.html
+++ b/demo.html
@@ -173,7 +173,7 @@
         </li>
         <li>Note that this will only validate <b>unit</b> expressions.
           Although prefixes used with a unit code, e.g., "kL" (kiloliter),
-          are recognized as a prefix ("k" for kilo) modifying a unit code
+          are recognized as prefixes ("k" for kilo) modifying a unit code
           ("L" for liter), a prefix submitted by itself, e.g., "E" (exa)
           will result in an "invalid unit code" return.
         </li>
