--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,7 @@
       </a>
       <div id="siteNameBox">
         <a href="index.html"><span id=siteName>Units of Measure (UCUM) Validator and Converter</span><br>
-          <span id=tagline>A demonstration site for the LHC UCUM service</span></a>
+          <span id=tagline>A demonstration site for the ucum-lhc library.</span></a>
       </div>
     </div>
     <!-- end page header -->
@@ -202,6 +202,14 @@
         Software Library.</li>
         <li>The code is available from the
           <a href="https://github.com/lhncbc/ucum-lhc">GitHub code repository</a>.</li>
+        <li>The LHC UCUM code uses unit definitions from the
+          <a href="http://unitsofmeasure.org">Unified Code
+            for Units Of Measure</a>
+          <a href="http://unitsofmeasure.org/ucum-essence.xml">ucum-essence.xml</a> file,
+          <!--#include file="ucumEssenceVersion.txt" --> which has been
+          extended with commonly used combinations of UCUM units found in
+          <a href="https://loinc.org">LOINC</a>, and LOINC properties have
+          been added to UCUM records.</li>
         </ul>
       </div> <!-- end otherstuff div -->
     </div> <!-- end validation div -->
