Changed CSS to keep the convert button on the left side of the page, so the user knows there is another step after filling in the form

--- a/demo.html
+++ b/demo.html
@@ -81,7 +81,7 @@
             You can enter other commensurate units that are not on this list.
           </div>
         </div>
-        <div><br>&nbsp;&nbsp;  <button id="doConversionButton"
+        <div style="clear: left">&nbsp;&nbsp;  <button id="doConversionButton"
                                        onclick="demoPkg.UcumDemo.getInstance().convertUnit('convertFrom',
                                                              'convertNum',
                                                              'convertTo', true)"
