--- a/demo.html
+++ b/demo.html
@@ -88,6 +88,9 @@
                                        type="button">Convert</button>
         </div>
         <p id="resultString">&nbsp;&nbsp;</p>
+        <p class="small-print">Disclaimer:  &nbsp;Conversion results should be
+          verified independently before using them in actual clinical settings.
+        </p>
       </div> <!-- end convSection div -->
     </div> <!-- end conversion div -->
 
