update disclaimer with wording changes from Clem

--- a/demo.html
+++ b/demo.html
@@ -89,9 +89,9 @@
         </div>
         <p id="resultString">&nbsp;&nbsp;</p>
         <p class="small-print">Disclaimer:  &nbsp;Conversion results are for
-          demonstration purposes only.  Before relying on the values it is
-          your obligation to perform your own tests to verify that the
-          results are sufficiently accurate for your purposes.
+          demonstration purposes only.  Before relying on the unit conversions
+          produced by this tool it is your obligation to perform your own tests
+          to verify that the results are sufficiently accurate for your purposes.
         </p>
       </div> <!-- end convSection div -->
     </div> <!-- end conversion div -->
