fix '<' at end of usa.gov icon

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 
     <p>The UCUM-LHC library can be downloaded and installed as a
       <a href="http://bower.io">bower</a> package or an
-      <a href="https://www.npmjs.com">npm</a> package.  The installed
-      dist/ucum-lhc.min.js module package includes the code you need for the
-      validation and conversion functions as well as the UCUM code definitions
-      file.  The UCUM-LHC code provides validation and conversion capabilities
-      for units of measure.  Those functions are accessed from the
+      <a href="https://www.npmjs.com/package/@lhncbc/ucum-lhc">npm</a> package.
+      The installed dist/ucum-lhc.js module package includes the code you need
+      for the validation and conversion functions as well as the UCUM code
+      definitions file.  The UCUM-LHC code provides validation and conversion
+      capabilities for units of measure.  Those functions are accessed from the
       ucumPkg.UcumLhcUtils class.  Descriptions of those functions are included
       in the README.md file in the UCUM-LHC
       <a href="https://github.com/lhncbc/ucum-lhc">GitHub</a> repository.</p>
@@ -92,7 +92,7 @@
       <li><a title="U.S. Department of Health and Human Services"  href="http://www.hhs.gov/"
           >U.S. Department of Health and Human Services</a></li>
       <li class="last-item"><a title="USA.gov" href="http://www.usa.gov/"><img
-              src="demo-dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a><
+              src="demo-dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
     </ul>
   </div><!-- fine-print -->
   <!-- end page footer -->z
