--- a/demo.html
+++ b/demo.html
@@ -11,9 +11,8 @@
   <body id="demobody" onload="demoPkg.UcumDemo.getInstance().buildAdvancedSettings();" >
     <!-- page header -->
     <div id="header">
-      <a href="http://lhncbc.nlm.nih.gov"
-         title="Lister Hill National Center for Biomedical Communications"
-         rel="Lister Hill National Center for Biomedical Communications" id="logo">
+      <a href="http://lhncbc.nlm.nih.gov" rel="canonical" id="logo"
+         title="Lister Hill National Center for Biomedical Communications">
         <img src="demo-dist/assets/images/lhncbc.jpg"
              alt="Lister Hill National Center for Biomedical Communications" />
       </a>
