--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <body>
     <!-- page header -->
     <div id="header">
-      <a href="http://lhncbc.nlm.nih.gov"
-         title="Lister Hill National Center for Biomedical Communications"
-         rel="Lister Hill National Center for Biomedical Communications" id="logo">
+      <a href="http://lhncbc.nlm.nih.gov" rel="canonical" id="logo"
+         title="Lister Hill National Center for Biomedical Communications">
         <img src="demo-dist/assets/images/lhncbc.jpg"
              alt="Lister Hill National Center for Biomedical Communications" />
       </a>
@@ -95,7 +94,7 @@
               src="demo-dist/assets/images/USAgov.gif" alt="USA.gov" id="usagov"></a></li>
     </ul>
   </div><!-- fine-print -->
-  <!-- end page footer -->z
+  <!-- end page footer -->
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
